--- a/app/assets/styles/layout.css
+++ b/app/assets/styles/layout.css
@@ -5,8 +5,6 @@
 body {
   padding-top: 50px;
 }
-
-
 /*
  * Global add-ons
  */
@@ -22,6 +20,7 @@ body {
  */
 .navbar-fixed-top {
   border: 0;
+  border-bottom: 1px solid #eee;
 }
 
 /*
@@ -43,7 +42,7 @@ body {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
+    background-color: #fff;
     border-right: 1px solid #eee;
   }
 }
