--- a/app/views/appDetail.html
+++ b/app/views/appDetail.html
@@ -1,4 +1,5 @@
-<h1>{{app.name}}</h1>
+<img ng-src="{{app.image}}" class="img-responsive app-image" alt="Generic placeholder thumbnail"> <h1 class="page-header" ng-bind="app.name"></h1>
+
 <ul class="nav nav-tabs">
   <li role="presentation" ng-class="{ active: isTabActive('general') }"><a ui-sref="app.general({ appId: app.id })">General Information</a></li>
   <li role="presentation" ng-class="{ active: isTabActive('lanes') }"><a ui-sref="app.lanes({ appId: app.id })">Lane Templates</a></li>
@@ -7,5 +8,5 @@
 </ul>
 
 <div class="tab-content">
-    <div ui-view="detailView"></div>
+    <div ui-view="detailView" class="detail-view"></div>
 </div>
