--- a/app/views/apps.html
+++ b/app/views/apps.html
@@ -1,28 +1,11 @@
 <h1 class="page-header">Apps</h1>
 
-<h2 ui-view="viewA"></h2>
-
 <div class="row placeholders">
-    <a ng-repeat="app in apps" ui-sref="app({ appId: app.id })">
+    <a ng-repeat="app in apps" ui-sref="app.general({ appId: app.id })">
         <div class="col-xs-6 col-sm-3 placeholder">
             <img ng-src="{{app.image}}" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
             <h4 ng-bind="app.name"></h4>
             <span class="text-muted">Sweet description</span>
         </div>
     </a>
-    <!-- <div class="col-xs-6 col-sm-3 placeholder">
-        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
-    </div>
-    <div class="col-xs-6 col-sm-3 placeholder">
-        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
-    </div>
-    <div class="col-xs-6 col-sm-3 placeholder">
-        <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-        <h4>Label</h4>
-        <span class="text-muted">Something else</span>
-    </div> -->
 </div>
