MOD http request to server are working :)

--- a/app/views/appGeneral.html
+++ b/app/views/appGeneral.html
@@ -7,5 +7,5 @@
 
 <div class="form-group">
   <label for="description">Description</label>
-  <textarea class="form-control" rows="5" id="description"></textarea>
+  <textarea ng-model="app.description" class="form-control" rows="5" id="description"></textarea>
 </div>
