--- a/app/assets/styles/layout.css
+++ b/app/assets/styles/layout.css
@@ -20,3 +20,9 @@
 .selectable td:hover {
     cursor: pointer;
 }
+
+.loading-icon {
+    float: left;
+    margin-right: 16px;
+    margin-top: 4px;
+}
