MOD lanesGraph draw actions and lanes

--- a/app/views/build.html
+++ b/app/views/build.html
@@ -1,2 +1,2 @@
 <h1>build</h1>
-<lanes-graph></lanes-graph>
+<lanes-graph app-id="graphConfig.appId" view-mode="graphConfig.viewMode" width="graphConfig.width" height="graphConfig.height"></lanes-graph>
