--- a/app/views/appAdd.html
+++ b/app/views/appAdd.html
@@ -10,11 +10,16 @@
 
     <div class="form-group">
       <label for="name">Key</label>
-      <input ng-model="app.key" type="text" class="form-control" id="name" required>
+      <input ng-model="app.key" type="text" class="form-control" id="key" required>
     </div>
 
     <div class="form-group">
       <label for="description">Description</label>
       <textarea ng-model="app.description" class="form-control" rows="5" id="description"></textarea>
+    </div>
+
+    <div class="form-group">
+      <label for="iconUrl">Icon URL</label>
+      <input ng-model="app.iconUrl" class="form-control" id="iconUrl"></input>
     </div>
 </form>
