--- a/app/views/appGeneral.html
+++ b/app/views/appGeneral.html
@@ -1,4 +1,4 @@
-<button ng-click="saveApp()" type="button" class="btn btn-default">Save</button>
+<button ng-disabled="!appLoaded" ng-click="saveApp()" type="button" class="btn btn-default">Save</button>
 
 <div class="form-group">
   <label for="name">Name</label>
