MOD minor fixes, font awesome icons for buttons, ui modifications

--- a/app/views/appAdd.html
+++ b/app/views/appAdd.html
@@ -1,25 +1,25 @@
 <h1 class="page-header">Add App</h1>
 
-<button ng-disabled="addAppForm.$invalid" ng-click="saveApp()" type="button" class="btn btn-default">Save</button>
+<button ng-disabled="addAppForm.$invalid" ng-click="saveApp()" type="button" class="btn btn-default"><i class="fa fa-floppy-o"></i></button>
 
 <form novalidate ng-cloak name="addAppForm" class="form-horizontal">
     <div class="form-group">
-      <label for="name">Name</label>
-      <input ng-model="app.name" type="text" class="form-control" id="name" required>
+        <label for="name">Name</label>
+        <input ng-model="app.name" type="text" class="form-control" id="name" required>
     </div>
 
     <div class="form-group">
-      <label for="name">Key</label>
-      <input ng-model="app.key" type="text" class="form-control" id="key" required>
+        <label for="name">Key</label>
+        <input ng-model="app.key" type="text" class="form-control" id="key" required>
     </div>
 
     <div class="form-group">
-      <label for="description">Description</label>
-      <textarea ng-model="app.description" class="form-control" rows="5" id="description"></textarea>
+        <label for="description">Description</label>
+        <textarea ng-model="app.description" class="form-control" rows="5" id="description"></textarea>
     </div>
 
     <div class="form-group">
-      <label for="iconUrl">Icon URL</label>
-      <input ng-model="app.iconUrl" class="form-control" id="iconUrl"></input>
+        <label for="iconUrl">Icon URL</label>
+        <input ng-model="app.iconUrl" class="form-control" id="iconUrl"></input>
     </div>
 </form>
