--- a/app/views/appDetail.html
+++ b/app/views/appDetail.html
@@ -6,7 +6,7 @@
         <li role="presentation" ng-class="{ active: endsWith('lanes') }"><a ui-sref="app.lanes({ appId: appId })">Lane Templates</a></li>
         <li role="presentation" ng-class="{ active: endsWith('builds') }"><a ui-sref="app.builds({ appId: appId })">Builds</a></li>
         <li role="presentation" ng-class="{ active: endsWith('logs') }"><a ui-sref="app.logs({ appId: appId })">Logs</a></li>
-        <li role="presentation"><a href="" class="text-danger" data-toggle="modal" data-target="#removeAppModal">Remove App</a></li>
+        <li role="presentation"><a href="" class="text-danger" data-toggle="modal" data-target="#removeAppModal"><!--<i class="fa fa-trash"></i>--> Remove App</a></li>
     </ul>
 
     <div class="tab-content">
@@ -20,19 +20,19 @@
 </div>
 
 <div class="modal fade" id="removeAppModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Question</h4>
-      </div>
-      <div class="modal-body">
-        Do you really want to remove the app?
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger" ng-click="removeApp()">Remove</button>
-      </div>
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Question</h4>
+            </div>
+            <div class="modal-body">
+                Do you really want to remove the app?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" ng-click="removeApp()" ng-disabled="isRemoving">Remove</button>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
