--- a/app/views/builds.html
+++ b/app/views/builds.html
@@ -10,7 +10,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr ng-click="select(build)" ng-repeat="build in builds" ng-class="{ 'active': isSelected(build), 'success': build.status == 'successful', 'danger': build.status == 'unsuccessful' }">
+        <tr ng-click="select(build)" ng-repeat="build in app.builds" ng-class="{ 'active': isSelected(build), 'success': build.status == 'successful', 'danger': build.status == 'unsuccessful' }">
             <td ng-bind="build.id"></td>
             <td ng-bind="build.name"></td>
             <!-- <td ng-bind=""></td> -->
