--- a/app/views/appDetail.html
+++ b/app/views/appDetail.html
@@ -6,7 +6,7 @@
         <li role="presentation" ng-class="{ active: endsWith('lanes') }"><a ui-sref="app.lanes({ appId: appId })">Lane Templates</a></li>
         <li role="presentation" ng-class="{ active: endsWith('builds') }"><a ui-sref="app.builds({ appId: appId })">Builds</a></li>
         <li role="presentation" ng-class="{ active: endsWith('logs') }"><a ui-sref="app.logs({ appId: appId })">Logs</a></li>
-        <li role="presentation"><a href="" class="text-danger" data-toggle="modal" data-target="#removeAppModal"><!--<i class="fa fa-trash"></i>--> Remove App</a></li>
+        <li role="presentation"><a style="outline: none; " href="" class="text-danger" data-toggle="modal" data-target="#removeAppModal"><!--<i class="fa fa-trash"></i>--> Remove App</a></li>
     </ul>
 
     <div class="tab-content">
