MOD buttons moved

--- a/app/views/appDetail.html
+++ b/app/views/appDetail.html
@@ -1,4 +1,5 @@
 <div ng-show="app">
+    <a style="float: right;" ui-sref="apps.show" type="button" class="btn btn-default"><i class="fa fa-close"></i></a>
     <img ng-src="{{app.iconUrl}}" class="img-responsive app-image" alt="Generic placeholder thumbnail"> <h1 class="page-header" ng-bind="app.name"></h1>
 
     <ul class="nav nav-tabs">
