--- a/app/views/appAdd.html
+++ b/app/views/appAdd.html
@@ -1,6 +1,6 @@
+<a style="float: right; margin-left: 4px;" ui-sref="apps.show" type="button" class="btn btn-default"><i class="fa fa-close"></i></a>
+<button style="float: right;" ng-disabled="addAppForm.$invalid" ng-click="saveApp()" type="button" class="btn btn-default"><i class="fa fa-floppy-o"></i></button>
 <h1 class="page-header">Add App</h1>
-
-<button ng-disabled="addAppForm.$invalid" ng-click="saveApp()" type="button" class="btn btn-default"><i class="fa fa-floppy-o"></i></button>
 
 <form novalidate ng-cloak name="addAppForm" class="form-horizontal">
     <div class="form-group">
