--- a/app/src/directives/lanesGraph/views/lanesGraphView.html
+++ b/app/src/directives/lanesGraph/views/lanesGraphView.html
@@ -1,1 +1,11 @@
 <!-- svg container -->
+<div class="lanes-graph-action-detail-body">
+
+    <div class="row">
+        <h6>ID: </h6>
+        <h6>Description: </h6>
+        <h6>Status: </h6>
+
+    </div>
+
+</div>
