--- a/app/views/appList.html
+++ b/app/views/appList.html
@@ -1,5 +1,5 @@
 <div ng-hide="appsLoading">
-    <a style="float: right;" ui-sref="apps.add" type="button" class="btn btn-default"><i class="fa fa-plus"></i></a>
+    <a style="float: left; margin-right: 16px; margin-top: 4px;" ui-sref="apps.add" type="button" class="btn btn-default"><i class="fa fa-plus"></i></a>
     <h1 class="page-header">Apps</h1>
 
     <div class="placeholders">
